src/test/deca/syntax/invalid/resultats/test40_decl_method-synt.res
./src/test/deca/syntax/invalid/test40_decl_method.deca:16:13: missing IDENT at ')'
